kin-kernel-20slot/service/deploy/k8s/base/namespace.yaml
apiVersion: v1
kind: Namespace
metadata:
  name: kin-system
  labels:
    app.kubernetes.io/part-of: kin-gateway-v2
